--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -1,14 +1,16 @@
+server:
+  port: 8200
 spring:
   application:
     name: account
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/book_service
+    url: jdbc:mysql://localhost:3308/account_db
     username: root
-    password: root
+    password: 123
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create-drop
     properties:
       hibernate:
     show-sql: false
