--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -1,10 +1,12 @@
+server:
+  port: 8000
 spring:
   application:
     name: auth
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     # Use the transaction DB port from docker-compose.yml
-    url: jdbc:mysql://localhost:3306/auth_db
+    url: jdbc:mysql://localhost:3307/auth_db
     username: root
     # Make sure this matches your docker-compose password
     password: 123
