--- a/account/pom.xml
+++ b/account/pom.xml
@@ -13,7 +13,7 @@
 	<groupId>com.sicarus</groupId>
 	<artifactId>user</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>user</name>
+	<name>account</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
