--- a/transaction/src/main/resources/application.yml
+++ b/transaction/src/main/resources/application.yml
@@ -5,14 +5,22 @@ spring:
     name: transaction
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    # Use the transaction DB port from docker-compose.yml
     url: jdbc:mysql://localhost:3309/transaction_db
     username: root
-    # Make sure this matches your docker-compose password
     password: 123
   jpa:
     hibernate:
-      ddl-auto: create-drop # This is correct for recreating the DB
-    # Corrected indentation for these properties
-    show-sql: true
+      ddl-auto: none
+    properties:
+      hibernate:
+    show-sql: false
     open-in-view: false
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    validate-on-migrate: true
+
+    logging:
+      level:
+        org.flywaydb.core: DEBUG
