--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -12,7 +12,29 @@ spring:
     password: 123
   jpa:
     hibernate:
-      ddl-auto: create-drop # This is correct for recreating the DB
+      ddl-auto: none # This is correct for recreating the DB
     # Corrected indentation for these properties
     show-sql: true
     open-in-view: false
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    validate-on-migrate: true
+    logging:
+      level:
+        org.flywaydb.core: DEBUG
+  jwt:
+    secret: cicarusbank-spring-jwt-authentication-secret-key-32
+    expiration: 86400000 # 24 horas em ms
+
+  logging:
+    level:
+      org.springframework.security: DEBUG
+
+  management:
+    endpoints:
+      web:
+        exposure:
+          include: "*"
+
