--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,7 +33,19 @@ services:
     volumes:
       - transaction-data:/var/lib/mysql
 
+  mysql-notification:
+    image: mysql:8.0
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: 123
+      MYSQL_DATABASE: notification_db
+    ports:
+      - "3310:3306"  # Notification DB on host port 3310
+    volumes:
+      - notification-data:/var/lib/mysql
+
 volumes:
   auth-data:
   account-data:
   transaction-data:
+  notification-data:
