--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 server:
   port: 8200
 spring:
-
   application:
     name: account
   datasource:
@@ -17,3 +16,18 @@ spring:
       hibernate:
     show-sql: false
     open-in-view: false
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: false     # opcional: se quiser registrar pelo IP em vez de hostname
+    lease-renewal-interval-in-seconds: 5
+    health-check-url-path: /actuator/health
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
