--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,6 +44,18 @@ services:
     volumes:
       - notification-data:/var/lib/mysql
 
+
+  mysql-loan:
+    image: mysql:8.0
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: 123
+      MYSQL_DATABASE: loan_db
+    ports:
+      - "3312:3306"  # Loan DB on host port 3312
+    volumes:
+      - loan-data:/var/lib/mysql
+
   naming-server:
     build:
       # Path to the naming-server project folder
@@ -58,3 +70,4 @@ volumes:
   account-data:
   transaction-data:
   notification-data:
+  loan-data:
