artifact id alterado para o valor correto

--- a/account/pom.xml
+++ b/account/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<groupId>com.sicarus</groupId>
-	<artifactId>user</artifactId>
+	<artifactId>account</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>account</name>
 	<description>Demo project for Spring Boot</description>
