--- a/transaction/pom.xml
+++ b/transaction/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<groupId>com.sicarus</groupId>
-	<artifactId>user</artifactId>
+	<artifactId>transaction</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>transaction</name>
 	<description>Demo project for Spring Boot</description>
