--- a/loan-service/src/main/resources/application.yml
+++ b/loan-service/src/main/resources/application.yml
@@ -15,3 +15,12 @@ spring:
       hibernate:
     show-sql: false
     open-in-view: false
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: false     # opcional: se quiser registrar pelo IP em vez de hostname
+    lease-renewal-interval-in-seconds: 5
+    health-check-url-path: /actuator/health
