--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <module>account</module>
         <module>api-gateway</module>
         <module>auth</module>
-<!--        <module>customer-service</module>-->
+        <module>customer-service</module>
         <module>naming-server</module>
         <module>notification</module>
         <module>transaction</module>
