--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -72,15 +72,15 @@ services:
     ports:
       - "8761:8761" # Map host port 8761 to container port 8761
 
-  api-gateway:
-    build:
-      context: ./api-gateway # Path to api-gateway project
-    ports:
-      - "8765:8765"
-    environment:
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://naming-server:8761/eureka/
-    depends_on:
-      - naming-server
+#  api-gateway:
+#    build:
+#      context: ./api-gateway # Path to api-gateway project
+#    ports:
+#      - "8765:8765"
+#    environment:
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://naming-server:8761/eureka/
+#    depends_on:
+#      - naming-server
 
 volumes:
   auth-data:
