--- a/currency-exchange/src/main/resources/application.yml
+++ b/currency-exchange/src/main/resources/application.yml
@@ -10,9 +10,15 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
-    show-sql: true
+      ddl-auto: none
+    show-sql: false
     database-platform: org.hibernate.dialect.MySQL8Dialect
+
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    validate-on-migrate: true
 
   properties:
     hibernate:
