--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -19,6 +19,8 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka/
   instance:
-    prefer-ip-address: false     # opcional: se quiser registrar pelo IP em vez de hostname
+    prefer-ip-address: true     # opcional: se quiser registrar pelo IP em vez de hostname
+    instance-id: ${spring.application.name}:${server.port}
+    hostname: localhost
     lease-renewal-interval-in-seconds: 5
     health-check-url-path: /actuator/health
