--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -123,7 +123,7 @@ services:
 
   customer-service:
     build:
-      context: ./auth
+      context: ./customer-service
     ports:
       - "8300:8300"
     environment:
@@ -137,7 +137,7 @@ services:
 
   loan-service:
     build:
-      context: ./auth
+      context: ./loan-service
     ports:
       - "8400:8400"
     environment:
@@ -151,7 +151,7 @@ services:
 
   notification:
     build:
-      context: ./auth
+      context: ./notification
     ports:
       - "8082:8082"
     environment:
@@ -165,7 +165,7 @@ services:
 
   transaction:
     build:
-      context: ./auth
+      context: ./transaction
     ports:
       - "8100:8100"
     environment:
