Added loan-service as a module in pom

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>account</module>
         <module>api-gateway</module>
         <module>auth</module>
+        <module>loan-service</module>
         <module>customer-service</module>
         <module>naming-server</module>
         <module>notification</module>
