Added Swagger-ui to api-gateway
Implemented configs in transaction to allow access from api-gateway

Added a swagger.txt as instructions for further microservices

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -12,7 +12,6 @@ spring:
       server:
         webflux:
           routes:
-
             - id: account
               uri: lb://account
               predicates:
@@ -37,6 +36,13 @@ spring:
               uri: lb://customers
               predicates:
                 - Path=/customers/**
+
+springdoc:
+  swagger-ui:
+    urls:
+      - name: transaction
+        url: /transaction/v3/api-docs
+
 
 
 
