--- a/transaction/src/main/resources/application.yml
+++ b/transaction/src/main/resources/application.yml
@@ -41,3 +41,11 @@ management:
     web:
       exposure:
         include: health,info
+
+springdoc:
+  api-docs:
+    path: /transaction/v3/api-docs
+  swagger-ui:
+    url: /transaction/v3/api-docs
+  override-server-url: true
+
