Added Swagger-ui to auth
Changes in SecurityConfig to allow get requests

Changes in swagger.txt for clarity

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -42,6 +42,8 @@ springdoc:
     urls:
       - name: transaction
         url: /transaction/v3/api-docs
+      - name: auth
+        url: /auth/v3/api-docs
 
 
 
