--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -52,3 +52,9 @@ management:
     web:
       exposure:
         include: "*"
+
+springdoc:
+  api-docs:
+    path: /auth/v3/api-docs
+  swagger-ui:
+    url: /auth/v3/api-docs
