--- a/transaction/src/main/resources/application.yml
+++ b/transaction/src/main/resources/application.yml
@@ -20,6 +20,10 @@ spring:
     locations: classpath:db/migration
     baseline-on-migrate: true
     validate-on-migrate: true
+  management:
+    tracing:
+      sampling:
+        probability: 1.0
 
 logging:
   level:
