--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>naming-server</module>
         <module>notification</module>
         <module>transaction</module>
+        <module>currency-exchange</module>
     </modules>
 
 </project>
