--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8300
 spring:
   application:
-    name: customers
+    name: customer-service
   datasource:
     url: jdbc:mysql://localhost:3311/customer_db
     username: root
