--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -177,6 +177,19 @@ services:
       - mysql-transaction
       - naming-server
 
+#  currency-exchange:
+#    build:
+#      context: ./currency-exchange
+#    ports:
+#      - "8500:8500"
+#    environment:
+#      # Override the datasource URL to point to the MySQL container's service name
+#      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-currency:3306/exchange_db
+#      # You also need to do this for Eureka!
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://naming-server:8761/eureka/
+#    depends_on:
+#      - mysql-currency
+#      - naming-server
 
 volumes:
   auth-data:
