Implementando Swagger no Currency Exchange

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -44,6 +44,14 @@ springdoc:
         url: /transaction/v3/api-docs
       - name: auth
         url: /auth/v3/api-docs
+      - name: customers
+        url: /customers/v3/api-docs
+      - name: currency-exchange
+        url: /currency-exchange/v3/api-docs
+  override-server-url: true
+
+
+
 
 
 
