--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -30,6 +30,14 @@ eureka:
     lease-renewal-interval-in-seconds: 5
     health-check-url-path: /actuator/health
 
+springdoc:
+  api-docs:
+    path: /costumers/v3;api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    url: /customers/v3/api/docs
+override-server-url: true
+
 management:
   health:
     rabbit:
