--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -30,7 +30,9 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka/
   instance:
-    prefer-ip-address: false     # opcional: se quiser registrar pelo IP em vez de hostname
+    prefer-ip-address: true     # opcional: se quiser registrar pelo IP em vez de hostname
+    instance-id: ${spring.application.name}:${server.port}
+    hostname: localhost
     lease-renewal-interval-in-seconds: 5
     health-check-url-path: /actuator/health
 
@@ -45,7 +47,7 @@ management:
 
 springdoc:
   api-docs:
-    path: /notifications/v3/api-docs
+    path: /notification/v3/api-docs
   swagger-ui:
-    url: /notifications/v3/api-docs
+    url: /notification/v3/api-docs
   override-server-url: true
