--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8300
 spring:
   application:
-    name: customer-service
+    name: customers
   datasource:
     url: jdbc:mysql://localhost:3311/customer_db
     username: root
@@ -29,16 +29,15 @@ eureka:
     hostname: localhost
     lease-renewal-interval-in-seconds: 5
     health-check-url-path: /actuator/health
-
-springdoc:
-  api-docs:
-    path: /costumers/v3;api-docs
-  swagger-ui:
-    path: /swagger-ui.html
-    url: /customers/v3/api/docs
-override-server-url: true
-
 management:
   health:
     rabbit:
       enabled: false
+
+springdoc:
+  api-docs:
+    path: /customers/v3/api-docs
+  swagger-ui:
+    url: /customers/v3/api-docs
+  override-server-url: true
+
