--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -16,6 +16,8 @@ spring:
               uri: lb://account
               predicates:
                 - Path=/account/**
+              filters:
+                - AuthenticationFilter
 
             - id: auth
               uri: lb://auth
@@ -26,26 +28,36 @@ spring:
               uri: lb://transaction
               predicates:
                 - Path=/transaction/**
+              filters:
+                - AuthenticationFilter
 
             - id: loan
               uri: lb://loan
               predicates:
                 - Path=/loan/**
+              filters:
+                - AuthenticationFilter
 
             - id: customers
               uri: lb://customers
               predicates:
                 - Path=/customers/**
+              filters:
+                - AuthenticationFilter
 
             - id: exchange
               uri: lb://exchange
               predicates:
                 - Path=/exchange/**
+              filters:
+                - AuthenticationFilter
 
             - id: notification
               uri: lb://notification
               predicates:
                 - Path=/notification/**
+              filters:
+                - AuthenticationFilter
 
 springdoc:
   swagger-ui:
