--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -2,7 +2,15 @@ spring:
   application:
     name: notification
   kafka:
-    bootstrap-servers: kafka:9092
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: notification
+      auto-offset-reset: earliest
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: "*"
   datasource:
     url: jdbc:mysql://localhost:3310/notification_db
     username: root
