--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -26,6 +26,10 @@ eureka:
     lease-renewal-interval-in-seconds: 5
     health-check-url-path: /actuator/health
 
+jwt:
+  secret: hzAS6BikJ_2Ft3fEye-lqwGviIeGbWFRG9mEnNDzQp4=
+  expiration: 86400000 # 24 horas em ms
+
 management:
   endpoints:
     web:
