--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -16,6 +16,11 @@ spring:
       hibernate:
     show-sql: false
     open-in-view: false
+  flyway:
+      enabled: true
+      locations: classpath:db/migration
+      baseline-on-migrate: true
+      validate-on-migrate: true
 
 eureka:
   client:
