--- a/currency-exchange/src/main/resources/application.yml
+++ b/currency-exchange/src/main/resources/application.yml
@@ -48,3 +48,7 @@ springdoc:
     path: /swagger-ui.html # Caminho padrão para o Swagger UI
     url: /exchange/v3/api-docs # Aponta o Swagger UI para o JSON da documentação deste microserviço
   override-server-url: true
+
+jwt:
+  secret: hzAS6BikJ_2Ft3fEye-lqwGviIeGbWFRG9mEnNDzQp4=
+  expiration: 86400000 # 24 horas em ms
