--- a/loan-service/src/main/resources/application.yml
+++ b/loan-service/src/main/resources/application.yml
@@ -26,3 +26,6 @@ eureka:
     hostname: localhost
     lease-renewal-interval-in-seconds: 5
     health-check-url-path: /actuator/health
+jwt:
+  secret: hzAS6BikJ_2Ft3fEye-lqwGviIeGbWFRG9mEnNDzQp4=
+  expiration: 86400000 # 24 horas em ms
