problema com requests em currency-exchange, resolvidos

--- a/currency-exchange/src/main/resources/application.yml
+++ b/currency-exchange/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: currency-exchange
+    name: exchange
   datasource:
     url: jdbc:mysql://localhost:3313/exchange_db
     username: root
