--- a/frontend-cicarus/package.json
+++ b/frontend-cicarus/package.json
@@ -18,7 +18,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
+    "react-slick": "^0.30.3",
     "recharts": "^3.1.0",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.22.2"
   },
   "devDependencies": {
