--- a/transaction/src/main/resources/application.yml
+++ b/transaction/src/main/resources/application.yml
@@ -50,6 +50,6 @@ springdoc:
   override-server-url: true
 
 
-jwt:
-  secret: hzAS6BikJ_2Ft3fEye-lqwGviIeGbWFRG9mEnNDzQp4=
-  expiration: 86400000 # 24 horas em ms
+#jwt:
+#  secret: hzAS6BikJ_2Ft3fEye-lqwGviIeGbWFRG9mEnNDzQp4=
+#  expiration: 86400000 # 24 horas em ms
