--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -61,7 +61,7 @@ springdoc:
   swagger-ui:
     url: /notification/v3/api-docs
   override-server-url: true
-
-jwt:
-  secret: hzAS6BikJ_2Ft3fEye-lqwGviIeGbWFRG9mEnNDzQp4=
-  expiration: 86400000 # 24 horas em ms
+#
+#jwt:
+#  secret: hzAS6BikJ_2Ft3fEye-lqwGviIeGbWFRG9mEnNDzQp4=
+#  expiration: 86400000 # 24 horas em ms
