Implemented Card Microservice  - Added mysql-card in docker-compose  - Added card in docker-compose  - Added Dockerfile in Card  - Created its core MVC  - Set its DB - Flyway  - Set it as an Eureka Client  - Set its Swagger-UI (also in api-gateway)

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -61,6 +61,13 @@ spring:
 #              filters:
 #                - AuthenticationFilter
 
+            - id: card
+              uri: lb://card
+              predicates:
+                - Path=/card/**
+#              filters:
+#                - AuthenticationFilter
+
 springdoc:
   swagger-ui:
     urls:
@@ -74,6 +81,8 @@ springdoc:
         url: /customers/v3/api-docs
       - name: exchange
         url: /exchange/v3/api-docs
+      - name: card
+        url: /card/v3/api-docs
   override-server-url: true
 
 #jwt:
