--- a/frontend-cicarus/package.json
+++ b/frontend-cicarus/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.23.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.1.0",
     "sweetalert2": "^11.22.2"
