--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -105,6 +105,17 @@ services:
     volumes:
       - card-data:/var/lib/mysql
 
+  mysql-statement:
+    image: mysql:8.0
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: 123
+      MYSQL_DATABASE: statement_db
+    ports:
+      - "3315:3306" # Notification DB on host port 3313
+    volumes:
+      - statement-data:/var/lib/mysql
+
   naming-server:
     build:
       context: ./naming-server # Path to the naming-server project folder
@@ -233,6 +244,20 @@ services:
 #      - mysql-card
 #      - naming-server
 
+#  statement-service:
+#    build:
+#      context: ./statement-service
+#    ports:
+#      - "8700:8700"
+#    environment:
+#      # Override the datasource URL to point to the MySQL container's service name
+#      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-card:3315/statement_db
+#      # You also need to do this for Eureka!
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://naming-server:8761/eureka/
+#    depends_on:
+#      - mysql-statement
+#      - naming-server
+
 volumes:
   auth-data:
   account-data:
@@ -243,3 +268,4 @@ volumes:
   notification-data: # Added from main branch
   kafka_data:
   card-data:
+  statement-data:
