First implementation of statement-service
 - DB connection
 - Eureka Client
 - Entity
 - Flyway - create table - insert data

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -68,6 +68,13 @@ spring:
 #              filters:
 #                - AuthenticationFilter
 
+            - id: statement-service
+              uri: lb://statement-service
+              predicates:
+                - Path=/statement-service/**
+#              filters:
+#                - AuthenticationFilter
+
 springdoc:
   swagger-ui:
     urls:
