--- a/frontend-cicarus/package.json
+++ b/frontend-cicarus/package.json
@@ -14,11 +14,17 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@react-google-maps/api": "^2.20.7",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.1",
+    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
+    "react-leaflet": "^5.0.0",
+    "react-map-gl": "^8.0.4",
     "react-number-format": "^5.4.4",
     "react-router-dom": "^7.6.3",
     "react-slick": "^0.30.3",
