frontend: fix maps

--- a/frontend-cicarus/package.json
+++ b/frontend-cicarus/package.json
@@ -15,15 +15,14 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@react-google-maps/api": "^2.20.7",
+    "@vis.gl/react-google-maps": "^1.5.4",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.1",
-    "leaflet": "^1.9.4",
     "mapbox-gl": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
-    "react-leaflet": "^5.0.0",
     "react-map-gl": "^8.0.4",
     "react-number-format": "^5.4.4",
     "react-router-dom": "^7.6.3",
