Changes in Kafka Configurations to Match Docker implementation
Minor Changes in UserTransactionPage
 - removed option to use mocks

--- a/transaction/src/main/resources/application.yml
+++ b/transaction/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 spring:
   application:
     name: transaction
+  kafka:
+    bootstrap-servers: kafka:9092
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3309/transaction_db
