--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       - KAFKA_CFG_PROCESS_ROLES=broker,controller
       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_KRAFT_CLUSTER_ID=bWaC6KXWRsWTvYO6RfOvlw
@@ -244,17 +244,17 @@ services:
       - mysql-card
       - naming-server
 
-#  statement-service:
-#    build:
-#      context: ./statement-service
-#    ports:
-#      - "8700:8700"
-#    environment:
-#      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-statement:3306/statement_db
-#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://naming-server:8761/eureka/
-#    depends_on:
-#      - mysql-statement
-#      - naming-server
+  statement-service:
+    build:
+      context: ./statement-service
+    ports:
+      - "8700:8700"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-statement:3306/statement_db
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://naming-server:8761/eureka/
+    depends_on:
+      - mysql-statement
+      - naming-server
 
 volumes:
   auth-data:
