--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: notification
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: kafka:9092
     consumer:
       group-id: notification
       auto-offset-reset: earliest
