Implementação da funcionalidade de criação de uma notificação a ser apresentada internamente na aplicação web para o cliente. Implementação do WebSocket no micro notifications para que, alem de salvar a notificação no banco, faça o envio em tempo real para o cliente logado.

--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.5.3</version>
 		<relativePath/> </parent>
 	<groupId>com.cicarus</groupId>
-	<artifactId>notification</artifactId>
+	<artifactId>emailModel</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>notification</name>
-	<description>notification microservice</description>
+	<name>emailModel</name>
+	<description>emailModel microservice</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -118,6 +118,10 @@
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
