--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     password: 123
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
 
   mail:
