--- a/frontend-cicarus/package.json
+++ b/frontend-cicarus/package.json
@@ -18,6 +18,7 @@
     "@stomp/stompjs": "^7.1.1",
     "@vis.gl/react-google-maps": "^1.5.4",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.1",
     "mapbox-gl": "^3.13.0",
     "react": "^19.1.0",
