Leve ajuste na porta

--- a/currency-exchange/Dockerfile
+++ b/currency-exchange/Dockerfile
@@ -6,4 +6,4 @@ ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} app.jar
 
 # Run the application
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java","-Dserver.port=80", "-jar","/app.jar"]
