auth implementado no login

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -16,8 +16,8 @@ spring:
               uri: lb://account
               predicates:
                 - Path=/account/**
-            #              filters:
-            #                - AuthenticationFilter
+              filters:
+                - JwtAuthenticationFilter
 
             - id: auth
               uri: lb://auth
@@ -28,29 +28,29 @@ spring:
               uri: lb://transaction
               predicates:
                 - Path=/transaction/**
-            #              filters:
-            #                - AuthenticationFilter
+              filters:
+                - JwtAuthenticationFilter
 
             - id: loan
               uri: lb://loan
               predicates:
                 - Path=/loan/**
-            #              filters:
-            #                - AuthenticationFilter
+              filters:
+                - JwtAuthenticationFilter
 
             - id: customers
               uri: lb://customers
               predicates:
                 - Path=/customers/**
-            #              filters:
-            #                - AuthenticationFilter
+              filters:
+                - JwtAuthenticationFilter
 
             - id: exchange
               uri: lb://exchange
               predicates:
                 - Path=/exchange/**
-            #              filters:
-            #                - AuthenticationFilter
+              filters:
+                - JwtAuthenticationFilter
             #              filters:
             #                - StripPrefix=1
 
@@ -58,15 +58,15 @@ spring:
               uri: lb://notification
               predicates:
                 - Path=/notification/**
-            #              filters:
-            #                - AuthenticationFilter
+              filters:
+                - JwtAuthenticationFilter
 
             - id: card
               uri: lb://card
               predicates:
                 - Path=/card/**
-            #              filters:
-            #                - AuthenticationFilter
+              filters:
+                - JwtAuthenticationFilter
 
             - id: statement-service
               uri: lb://statement-service
