--- a/card/Dockerfile
+++ b/card/Dockerfile
@@ -5,5 +5,6 @@ FROM eclipse-temurin:21-jre-jammy
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} app.jar
 
+#CHECKPOINT
 # Run the application
 ENTRYPOINT ["java","-jar","/app.jar"]
